Added Gallery Page

--- a/BirdWatcher/BirdWatcher/BirdWatcher.csproj
+++ b/BirdWatcher/BirdWatcher/BirdWatcher.csproj
@@ -20,5 +20,8 @@
     <EmbeddedResource Update="AddBird.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Gallery.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
   </ItemGroup>
 </Project>
