Edit page added

--- a/BirdWatcher/BirdWatcher/BirdWatcher.csproj
+++ b/BirdWatcher/BirdWatcher/BirdWatcher.csproj
@@ -20,6 +20,9 @@
     <EmbeddedResource Update="AddBird.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Edit.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="Gallery.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
