Tidied up date picker

--- a/BirdWatcher/BirdWatcher.iOS/Info.plist
+++ b/BirdWatcher/BirdWatcher.iOS/Info.plist
@@ -38,5 +38,7 @@
 	<string>This app would like to use your photos</string>
 	<key>NSCameraUsageDescription</key>
 	<string>This app would like to take pictures</string>
+	<key>NSLocationUsageDescription</key>
+	<string>This app would like to know your location</string>
 </dict>
 </plist>
