--- a/BirdWatcher/BirdWatcher.iOS/BirdWatcher.iOS.csproj
+++ b/BirdWatcher/BirdWatcher.iOS/BirdWatcher.iOS.csproj
@@ -133,4 +133,7 @@
       <Name>BirdWatcher</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\TopMenu.png" />
+  </ItemGroup>
 </Project>
