--- a/BirdWatcher/BirdWatcher.Android/BirdWatcher.Android.csproj
+++ b/BirdWatcher/BirdWatcher.Android/BirdWatcher.Android.csproj
@@ -99,5 +99,8 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\menu.png" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\BirdPlaceholder.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
